--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,13 +24,18 @@ services:
       
   db:
     image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_DATABASE: docker_development
       MYSQL_ROOT_PASSWORD: password
       MYSQL_USER: root
       MYSQL_PASSWORD: password
       TZ: "Asia/Tokyo"
-      
+    ports:
+      - 127.0.0.1:3306:3306
+    volumes:
+      - db-data:/var/lib/mysql
+
   nginx:
     build:
       context: containers/nginx
